--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mysql2": "^3.9.7",
+    "node-localstorage": "^3.0.5",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
